[tool.poetry]
name = "toco-discord-bot"
version = "0.1.0"
description = "My personal Discord bot"
authors = ["Stefano Di Pasquale <stefaniscion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
